--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.vitali.mykotlinapp">
 
-    <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <application android:allowBackup="true" android:icon="@mipmap/ic_launcher"
+                 android:name=".global.MyApp"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -17,6 +18,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
         <activity android:name=".search.SearchActivity"></activity>
 
         <activity android:name=".articledetails.ArticleDetailActivity"></activity>
