--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,11 @@
 buildscript {
 
     ext{
-        kotlin_version = '1.2.31'
+        kotlin_version = '1.2.40'
         supportLibVersion = "27.1.1"
         retrofitVersion = "2.4.0"
         okhttpVersion = "3.10.0"
+        roomVersion = "1.0.0"
     }
 
     repositories {
@@ -13,7 +14,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.1'
+        classpath 'com.android.tools.build:gradle:3.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
